--- a/AndBible/res/values-cs/strings.xml
+++ b/AndBible/res/values-cs/strings.xml
@@ -15,6 +15,7 @@
   <string name="history">Historie</string>
   <string name="speak">Mluvení</string>
   <string name="help">Nápověda</string>
+  <string name="verse">Verš</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Vybrat knihu</string>
   <string name="choosePassageChapterName">Vybrat kapitolu</string>
@@ -214,6 +215,7 @@
   <string name="save">Uložit</string>
   <string name="error">Chyba </string>
   <string name="more">Více</string>
+  <string name="more_dotted">Více...</string>
   <string name="retry">Zkusit znovu</string>
   <string name="please_wait">Čekejte prosím ...</string>
   <string name="all">Vše</string>
