--- a/AndBible/res/values-hu/strings.xml
+++ b/AndBible/res/values-hu/strings.xml
@@ -15,6 +15,7 @@
   <string name="history">Előzmények</string>
   <string name="speak">Felolvasás</string>
   <string name="help">Súgó</string>
+  <string name="verse">Vers</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Válasszon könyvet</string>
   <string name="choosePassageChapterName">Válasszon fejezetet</string>
@@ -214,6 +215,7 @@
   <string name="save">Mentés</string>
   <string name="error">Hiba </string>
   <string name="more">Tovább</string>
+  <string name="more_dotted">Tovább...</string>
   <string name="retry">Újrapróbál</string>
   <string name="please_wait">Kérem várjon...</string>
   <string name="all">Mind</string>
