--- a/AndBible/res/values-ru/strings.xml
+++ b/AndBible/res/values-ru/strings.xml
@@ -15,6 +15,7 @@
   <string name="history">История</string>
   <string name="speak">Прослушать вслух</string>
   <string name="help">Помощь</string>
+  <string name="verse">Стих</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Выбрать книгу</string>
   <string name="choosePassageChapterName">Выбрать главу</string>
@@ -214,6 +215,7 @@
   <string name="save">Сохранить</string>
   <string name="error">Ошибка</string>
   <string name="more">Еще</string>
+  <string name="more_dotted">Еще...</string>
   <string name="retry">Попытайтесь снова</string>
   <string name="please_wait">Пожалуйста подождите...</string>
   <string name="all">Все</string>
