--- a/AndBible/res/values-zh-rTW/strings.xml
+++ b/AndBible/res/values-zh-rTW/strings.xml
@@ -15,6 +15,7 @@
   <string name="history">閱讀歷史</string>
   <string name="speak">朗讀</string>
   <string name="help">幫助</string>
+  <string name="verse">經文</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">選擇書卷</string>
   <string name="choosePassageChapterName">選擇章節</string>
@@ -214,6 +215,7 @@
   <string name="save">保存</string>
   <string name="error">錯誤</string>
   <string name="more">更多</string>
+  <string name="more_dotted">更多...</string>
   <string name="retry">再試</string>
   <string name="please_wait">請等待</string>
   <string name="all">全部</string>
