--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -115,6 +115,9 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="prefs_split_screen_single">Single screen</string>
     <string name="prefs_split_screen_linked">Linked</string>
     <string name="prefs_split_screen_not_linked">Not linked</string>
+
+    <!-- Split screen -->
+    <string name="splitSwap">Swap</string>
     
     <!-- Notes screen -->
     <string name="no_chapter_notes">No notes exist in this chapter</string>
@@ -268,6 +271,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="please_wait">Please wait...</string>
     <string name="all">All</string>
     <string name="default_value">@string/lang_default</string>
+    <string name="new_item">New</string>
+    <string name="close">Close</string>
     
     <!-- Errors -->
     <string name="error_occurred">An error has occurred</string>
