--- a/AndBible/res/values-az/strings.xml
+++ b/AndBible/res/values-az/strings.xml
@@ -2,16 +2,44 @@
 <resources>
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
-  <string name="splash_top_text">\n\"Tanrı \'işıq olsun\' dedi və işıq oldu.\" \nYaradılış 1:3</string>
-  <string name="help_text">Əməliyyatlar üçün Menyu düyməsini basın.\n\nəvvəlki və ya sonrakı hissəyə keçmək üçün ekranda barmağınızı sürüşdürün,iztopunu çevirin və ya istiqamət düymələrinə basın.</string>
-  <string name="help_text_long"><b>Axtarış əmirləri</b>hissəni dəyişdirmək üçün ekranda barmağınızı sürüşdürün,iztopunu çevirin və ya istiqamət düymələrinə basın. Sonrakı hissə üçün sağa gedin. Əvvəlki  bölmə üçün sola gedin. \nÇüt basış tam ekran rejimini açıb bağlayır. \n\n Menyu \əməliyyatlar üçün Menyu düyməsini basın. \n\nMüqəddəs Kitab tərcüməsi, şərh və ya lüğət kimi başqa sənədlər yükləmək üçün Menyu \ Daha çox\sənəd yüklə\'e basın \n\n Səsli oxuma  \nSəsli sənədin səsli oxumasını başlatmaq və dayandırmaq üçün Səsli Oxu elementini seçin. \n\n  Qeydlərim \nAyə məzmur menyusunda tapılan Qeydlərimə daxil et elementi vasitəsi ilə qeyd əlavə edə bilərsiniz. Mövcud olan qeydləri Menyu\'dan tapa bilərsiniz. \n\n  İştirak imiləri \niştirak imilərini,ayə məzmur menyusundan istifadə edərək əlavə edə bilərsiniz. Iştirak imi istiqamətləndiricisini ana menyudan tapa bilərsiniz. Iştirak imiləri görüləndə sıralamanı istədiyiniz formada dəyişdirmək üçün məzmun menyusundan istifadə edə bilərsiniz. \n\n Axtarış \Axtarış mətnində *, ?, AND (və), OR (və ya), NOT(deyil)kimi xüsusi xarakterlər və fikirlər istifadə oluna bilər, (daha çox məlumat üçün \ “Apache Lucene – Query Parser  Syntax\” adlı məqaləni oxuyun) \n\n Məzmur Menyuları  \nMüqəddəs Kitab oxuma rejimində seçilmiş ayə üzərində iş görmək üçün məzmur menyusundan istifadə edə bilərsiniz. Menyunu açmaq üçün ayəyə uzun müddətli basın. \nSənəd seçmə rejimində sənədi silmək və ya sənət haqqında məlumat almaq üçün sənədə uzun müddətli basın. \nKeçmişdəki hərəkətlərinizin siyahısını görmək üçün Əvvələ düyməsinə uzun müddətli basın.</string>
+  <string name="splash_top_text">\n
+\"Tanrı \'işıq olsun\' dedi və işıq oldu.\"\n
+Yaradılış 1:3</string>
+  <string name="help_text">Əməliyyatlar üçün Menyu düyməsini basın.\n
+\n
+əvvəlki və ya sonrakı hissəyə keçmək üçün ekranda barmağınızı sürüşdürün,iztopunu çevirin və ya istiqamət düymələrinə basın.</string>
+  <string name="help_text_long"><b>Axtarış əmirləri</b>\n
+hissəni dəyişdirmək üçün ekranda barmağınızı sürüşdürün,iztopunu çevirin və ya istiqamət düymələrinə basın. Sonrakı hissə üçün sağa gedin. Əvvəlki  bölmə üçün sola gedin. 
+Çüt basış tam ekran rejimini açıb bağlayır.\n
+\n
+Menyu \əməliyyatlar üçün Menyu düyməsini basın.\n
+\n
+Müqəddəs Kitab tərcüməsi, şərh və ya lüğət kimi başqa sənədlər yükləmək üçün Menyu \ Daha çox\sənəd yüklə\'e basın\n
+\n
+<b>Səsli oxuma</b>\n
+Səsli sənədin səsli oxumasını başlatmaq və dayandırmaq üçün Səsli Oxu elementini seçin.\n
+\n
+<b>Qeydlərim</b>\n
+Ayə məzmur menyusunda tapılan Qeydlərimə daxil et elementi vasitəsi ilə qeyd əlavə edə bilərsiniz. Mövcud olan qeydləri Menyu\'dan tapa bilərsiniz.\n
+\n
+<b>İştirak imiləri</b>\n
+iştirak imilərini,ayə məzmur menyusundan istifadə edərək əlavə edə bilərsiniz. Iştirak imi istiqamətləndiricisini ana menyudan tapa bilərsiniz. Iştirak imiləri görüləndə sıralamanı istədiyiniz formada dəyişdirmək üçün məzmun menyusundan istifadə edə bilərsiniz.\n
+\n
+Axtarış \Axtarış mətnində *, ?, AND (və), OR (və ya), NOT(deyil)kimi xüsusi xarakterlər və fikirlər istifadə oluna bilər, (daha çox məlumat üçün \ “Apache Lucene – Query Parser  Syntax\” adlı məqaləni oxuyun)\n
+\n
+<b>Məzmur Menyuları</b>\n
+Müqəddəs Kitab oxuma rejimində seçilmiş ayə üzərində iş görmək üçün məzmur menyusundan istifadə edə bilərsiniz. Menyunu açmaq üçün ayəyə uzun müddətli basın.\n
+\n
+Sənəd seçmə rejimində sənədi silmək və ya sənət haqqında məlumat almaq üçün sənədə uzun müddətli basın.\n
+\n
+Keçmişdəki hərəkətlərinizin siyahısını görmək üçün Əvvələ düyməsinə uzun müddətli basın.</string>
   <string name="version_text">Versiya %s</string>
-  <string name="no_sdcard_error">Zəhmət olmazsa yaddaş  (SD) kartını taxıb And Bible tətbiqini 1 təzədən başladın</string>
+  <string name="no_sdcard_error">Zəhmət olmazsa yaddaş (SD) kartını taxıb And Bible tətbiqini 1 təzədən başladın</string>
   <!--Main menu-->
   <string name="chooseBook">Sənəd</string>
   <string name="selectPassage">Qisim</string>
   <string name="search">Axtarış</string>
-  <string name="settings">Nizamlar</string>
+  <string name="settings">Parametrlər</string>
   <string name="history">Əvvəl</string>
   <string name="speak">Səsli oxu</string>
   <string name="help">Kömək</string>
@@ -20,9 +48,18 @@
   <string name="choosePassageBookName">Kitabı seç</string>
   <string name="choosePassageChapterName">Hissəni seç</string>
   <string name="choosePassageVerseName">Ayəni Seç</string>
+  <string name="bible">Müqəddəs Kitab</string>
+  <string name="deuterocanonical">Deutero Kanonik (İkinci Dərəcədə Esin Kitablar)</string>
   <!--Search-->
   <string name="search_index">Axtarış indeksi</string>
-  <string name="index_creation_required">Axtarış apara bilmək üçün bu sənədin bir indeks olması vacibdir.\n\nİndeksləri internetdən yükləyə bilərsiniz və ya cihazınızda düzəldə bilərsiniz. \nYüklənmiş indeksinin quraşdırılması daha sürətli olur. Və yüklənmiş indekslerde əlavə funksiyalar mövcuddur. \nİndeks yükləmək üçün internetiniz olmalıdır.\n</string>
+  <string name="index_creation_required">Axtarış apara bilmək üçün bu sənədin bir indeks olması vacibdir.\n
+\n
+İndeksləri internetdən yükləyə bilərsiniz və ya cihazınızda düzəldə bilərsiniz.\n
+\n 
+Yüklənmiş indeksinin quraşdırılması daha sürətli olur. Və yüklənmiş indekslerde əlavə funksiyalar mövcuddur.\n
+\n
+İndeks yükləmək üçün internetiniz olmalıdır.
+</string>
   <string name="indexing_wait_msg">İndeks yaradıldıqdan sonra axtarış səhifəsi açılacaq.</string>
   <string name="index">İndeks</string>
   <string name="index_download">Yüklə</string>
@@ -42,8 +79,8 @@
   <string name="search_showing_first">Daha çox nəticə tapıldı. İlk %d göstərilir</string>
   <string name="search_bible_section_group_prompt">Axtarış yeri</string>
   <string name="search_all_bible">Müqəddəs Kitab\'ın hamısı</string>
-  <string name="search_new_testament">Əhdi-Ətiq</string>
-  <string name="search_old_testament">Əhdi-Cədid</string>
+  <string name="search_new_testament">Əhdi-Cədid</string>
+  <string name="search_old_testament">Əhdi-Ətiq</string>
   <string name="search_current_book">Seçilmiş kitabda</string>
   <string name="error_executing_search">Axtarılan mətn tapılmadı</string>
   <!--Preferences-->
@@ -51,29 +88,29 @@
   <string name="prefs_show_verseno_summary">Ayə nömrələri göstərilir</string>
   <string name="prefs_verse_per_line_title">Sətir başına tək ayə</string>
   <string name="prefs_verse_per_line_summary">Hər ayə təzə bir sətirdə göstərilir</string>
-  <string name="prefs_show_bookmarks_title">Yer imi simgelerini göstər</string>
-  <string name="prefs_show_bookmarks_summary">Yer imi olaraq qeyd olunan ayələri nişanla</string>
+  <string name="prefs_show_bookmarks_title">Nişanlı yerlər göstər</string>
+  <string name="prefs_show_bookmarks_summary">Yer Seçilmiş ayələri nişanla/əlfəcinlər</string>
   <string name="prefs_show_mynotes_title">Qeydlərin nişanlarını göstər</string>
   <string name="prefs_show_mynotes_summary">Haqqında qeyd yazdığım ayələri nişanlarla müəyyən et</string>
-  <string name="prefs_show_notes_title">Haşiyələr</string>
-  <string name="prefs_show_notes_summary">Haşiyələr və daxili göndərmələr</string>
+  <string name="prefs_show_notes_title">Haşiyə</string>
+  <string name="prefs_show_notes_summary">Kitabının kənarlarında edilən qeydlər</string>
   <string name="prefs_show_strongs_title">Strong Nömrələri</string>
   <string name="prefs_show_strongs_summary">Yunanca ve Yəhudicə sözlərin tanımlarına əlaqələr göstərilir</string>
   <string name="prefs_show_morphology_title">Morfoloji kodlar</string>
   <string name="prefs_show_morphology_summary">Robinsonun Yunanca morfolojik qısaltmaları göstərilir</string>
   <string name="prefs_section_title_title">Hissə başlıqları</string>
-  <string name="prefs_section_title_summary">Əsl mətində tapılmayan başlıəlar göstərilir</string>
+  <string name="prefs_section_title_summary">Əsl mətində tapılmayan başlıqlar göstərilir</string>
   <string name="prefs_red_letter_title">Qırmızı hərflər</string>
   <string name="prefs_red_letter_summary">İsa Məsihin sözləri qırmızı rəngdədir</string>
   <string name="prefs_tilt_to_scroll_title">Avtomatik sürüşdür</string>
-  <string name="prefs_tilt_to_scroll_summary">Cihazı əyərək səhifəni aşağıya-yuxarıya sürüşdürmək</string>
+  <string name="prefs_tilt_to_scroll_summary">Cihazı əyərək səhifəni aşağıya-yuxarıya sürüşdürün</string>
   <string name="prefs_night_mode_title">Qaranlıq rejimi</string>
   <string name="prefs_night_mode_summary">Qaranlıqda daha asan oxumaq üçün başqa rənglər istifadə olunur</string>
   <string name="prefs_night_mode_automatic">Avtomatik</string>
   <string name="prefs_navigate_to_verse_title">Ayə seçimi</string>
   <string name="prefs_navigate_to_verse_summary">Hissə seçəndən sonra ayə də seçilir</string>
   <string name="prefs_text_size_title">Mətin boyu</string>
-  <string name="prefs_text_size_summary">Hərflər böyüsün. Göstərilən mətn çoxalsın</string>
+  <string name="prefs_text_size_summary">Hərflər böyüsün, göstərilən mətn çoxalsın</string>
   <string name="prefs_text_size_sample_text">Mətn nümunəsi</string>
   <string name="prefs_screen_timeout_title">Yuxu</string>
   <string name="prefs_screen_timeout_summary">Ekran əməliyyat aparılmayana kimi bu vəziyyətdə qalacaq</string>
@@ -103,14 +140,19 @@
   <!--Module download-->
   <string name="download">Sənəd yüklə</string>
   <string name="download_confirmation">İnternetdən bir Müqəddəs Kitab çeviricisini yükləmək istəyirsinizmi?</string>
-  <string name="download_source_message">Sənədlər http://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org\nsəhifələrdən yüklənilir</string>
+  <string name="download_source_message">Sənədlər http://www.crosswire.org\n
+&amp; http://ibt.org.ru\n
+&amp; http://xiphos.org\n
+səhifələrdən yüklənilir</string>
   <string name="download_document_confirm_prefix">Yüklə</string>
   <string name="download_refreshing_book_list">Mövcud sənətlərin siyahısı yenilənir</string>
   <string name="download_refresh_book_list_menu_item">Yenilən</string>
   <string name="error_downloading">Yükləyəndə bir xəta oldu. İnternetinizi yoxlayin.</string>
   <string name="no_internet_connection">İnternetiniz bağlıdır</string>
   <string name="storage_space_warning">Yerli anbar kafi deyil</string>
-  <string name="wait_for_bible">Zəhmət olmazsa gözləyin. Çevirici yüklənir. Yükləmə qurtarandan sonra ekran açılacaq. \n\nDaha çox sənəd yükləmək üçün Menyu düyməsi DAHA-Sənəd yükləmə elementinə keçin</string>
+  <string name="wait_for_bible">Zəhmət olmazsa gözləyin. Çevirici yüklənir. Yükləmə qurtarandan sonra ekran açılacaq.\n
+\n
+Daha çox sənəd yükləmək üçün Menyu düyməsi DAHA-Sənəd yükləmə elementinə keçin</string>
   <string name="wait_for_bible_not_yet">Zəhmət olmazsa gözləyin. Çevirici cihazınız yüklənir.</string>
   <string name="download_complete_no_bibles">Çevirici yüklənmədi. Zəhmət olmazsa Geri düyməsinə basıb təzədən yoxlayın.</string>
   <string name="too_many_jobs">İndi daha çox iş görülür. Birinin qurtarmasını gözləyib təkrar yoxlayın.</string>
@@ -136,15 +178,16 @@
   <string name="delete_search_index_doc">%s\'in indeksini silinsin?</string>
   <!--Verse context menu-->
   <string name="select_text">Mətni seç</string>
-  <string name="select_text_help">Seçmək üçün yavaşca sürüşdürün.\nSeçdikdən sonra kopyalamaq üçün seçimə toxunun.</string>
+  <string name="select_text_help">Seçmək üçün yavaşca sürüşdürün.\n
+Seçdikdən sonra kopyalamaq üçün seçimə toxunun.</string>
   <string name="notes">Haşiyələr və daxili göndərmələr</string>
   <string name="copy">Seçilmiş ayəni kopyala</string>
   <string name="share_verse">Seçilmiş ayəni paylaş</string>
   <string name="share_verse_subject">And Bible tətbiq edəndə sizinlə Müqəddəs Kitabdan bir ayə paylaşdım</string>
-  <string name="compare_translations">Çeviriciləri qarşılaşdır</string>
+  <string name="compare_translations">Tərcümələri qarşılaşdır</string>
   <!--Bookmarks-->
-  <string name="bookmarks">Əlfəcinlər</string>
-  <string name="add_bookmark">Əlfəcinləri yüklə</string>
+  <string name="bookmarks">Nişanlı yerlər (Əlfəcinlər)</string>
+  <string name="add_bookmark">Seçilmiş ayəni nişanla (əlfəcin)</string>
   <string name="bookmark_added">Əlfəcini yükləndi</string>
   <string name="bookmark_exists">Əlfəcini artıq var</string>
   <string name="bookmark_labels">Əlfəcinlərin etiketləri</string>
@@ -156,6 +199,7 @@
   <!--Sort orders used for Bookmarks and MyNotes-->
   <string name="sort_by_date">Tarix sıralaması</string>
   <string name="sort_by_bible_book">Müqəddəs Kitab sıralaması</string>
+  <string name="sort_by_alphabetical">Əlifba sırası ilə</string>
   <!--Dictionary-->
   <string name="dictionary">Lüğət</string>
   <string name="search_dictionary_hint">Lüğətdə tap</string>
