--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -160,6 +160,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string>
     <string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string>
     <string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string>
+    <string name="rdg_plan_y2ot1ntps2">2 year plan - OT once, NT and Psalms twice</string>
     <!-- string name="rdg_plan_m1gospels">Through the Gospels in a month</string -->
     
     <!-- Document context menu -->
